@@ -4,6 +4,7 @@
 * WordPress 5.2 compatible.
 * Fixed a PHP Notice related to an uninitialized variable $valid_affiliate.
 * Fixed an issue with WordPress 5.2 where the Dashboard overview graph wouldn't be loaded.
+* Guarded against a potential issue related to jQuery checks before loading our UI elements.
 
 = 4.0.5 =
 * Added conditional check for registration message in registration template.
